manifests/07-microservices/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    app.kubernetes.io/part-of: task-suite
    environment: production
