manifests/07-microservices/04-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: microservices
  labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
      - name: dockerhub-pull-secret
      containers:
      - name: worker
        # In production CI/CD, the GitOps sync job updates this tag automatically:
        image: amreetpoudel/worker:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
