manifests/07-microservices/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  namespace: microservices
  labels:
    app: frontend-ui
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      imagePullSecrets:
      - name: dockerhub-pull-secret
      containers:
      - name: frontend
        # In production CI/CD, the GitOps sync job updates this tag automatically with SemVer:
        image: aamreet/frontend:v1.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microservices
  labels:
    app: frontend-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: frontend-ui
